Update experience dates and contact email; enhance footer and experience section for accuracy and clarity.

--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -401,8 +401,8 @@ msgid "Automation"
 msgstr "Автоматизация"
 
 #: templates/sections/experience.html:48
-msgid "2021 - Present"
-msgstr "2021 - Настоящее время"
+msgid "2022 - Oct 2024"
+msgstr "2022 - Октябрь 2024"
 
 #: templates/sections/experience.html:51 templates/sections/home.html:20
 msgid "Backend Developer & AI Engineer"
