Update experience section: refine job title and enhance project description for clarity

--- a/locale/uz/LC_MESSAGES/django.po
+++ b/locale/uz/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-05 04:16+0500\n"
+"POT-Creation-Date: 2025-06-05 04:43+0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: W-Mirshod <portfolio@w-mirshod.com>\n"
 "Language-Team: Uzbek <uz@li.org>\n"
@@ -34,11 +34,11 @@ msgid ""
 "don't have to manage multiple vendors."
 msgstr ""
 "Tasavvuringizni haqiqatga aylantirishga tayyormisiz? 🚀 Men W Mirshod - "
-"konsepsiyadan joylashtirish gacha to'liq raqamli platformalarni yakka "
-"o'zim yetkazib beradigan full-stack yechim arxitektoriman. Sizga oddiy "
-"elektron tijorat sayti yoki murakkab AI-quvvatli tizimlar kerak bo'ladimi, "
-"men rivojlantirishning barcha jihatlarini boshqaraman, shuning uchun sizga "
-"bir nechta yetkazib beruvchilarni boshqarish shart emas."
+"konsepsiyadan joylashtirish gacha to'liq raqamli platformalarni yakka o'zim "
+"yetkazib beradigan full-stack yechim arxitektoriman. Sizga oddiy elektron "
+"tijorat sayti yoki murakkab AI-quvvatli tizimlar kerak bo'ladimi, men "
+"rivojlantirishning barcha jihatlarini boshqaraman, shuning uchun sizga bir "
+"nechta yetkazib beruvchilarni boshqarish shart emas."
 
 #: templates/sections/about.html:13
 msgid "🏗️ Complete Platform Development - Backend to Frontend"
@@ -70,8 +70,8 @@ msgid ""
 "deliver end-to-end solutions that grow with your business."
 msgstr ""
 "Nega bir kishilik yechimni tanlash kerak? Siz yagona ko'rinish, tezroq "
-"muloqot va tejamkor rivojlantirishni olasiz. Mening tajribam Python, "
-"Django, JavaScript, React, AWS, Docker, AI API va ma'lumotlar bazasini "
+"muloqot va tejamkor rivojlantirishni olasiz. Mening tajribam Python, Django, "
+"JavaScript, React, AWS, Docker, AI API va ma'lumotlar bazasini "
 "optimallashtirish sohasini o'z ichiga oladi. Men mikroservislarni "
 "loyihalashtirdim, yuqori trafik platformalarini qurdim va biznes uchun "
 "miqyoslanadigan yechimlarni joyllashtirdim. MVP dan korxona darajasidagi "
@@ -351,13 +351,20 @@ msgid "Software Engineer"
 msgstr "Dasturiy ta'minot muhandisi"
 
 #: templates/sections/experience.html:34
-msgid "MegaDevs · Full-time"
+#, fuzzy
+#| msgid "MegaDevs · Full-time"
+msgid "MegaDevs (Germany Company) · Full-time"
 msgstr "MegaDevs · To'liq vaqt"
 
 #: templates/sections/experience.html:35
+#, fuzzy
+#| msgid ""
+#| "Developed and maintained multiple projects, with a key focus on IMAP/SMTP "
+#| "mail protocols and automation solutions in Germany."
 msgid ""
-"Developed and maintained multiple projects, with a key focus on IMAP/SMTP "
-"mail protocols and automation solutions in Germany."
+"Developed and maintained 20+ diverse projects for a leading German software "
+"company, with specialized expertise in IMAP/SMTP mail protocols and "
+"comprehensive automation solutions."
 msgstr ""
 "Ko'plab loyihalarni ishlab chiqish va qo'llab-quvvatlash, asosiy e'tibor "
 "IMAP/SMTP pochta protokollari va Germaniyada avtomatlashtirish yechimlariga."
