--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-05 04:16+0500\n"
+"POT-Creation-Date: 2025-06-05 04:43+0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: W-Mirshod <portfolio@w-mirshod.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
@@ -38,9 +38,8 @@ msgstr ""
 "Готовы превратить своё видение в реальность? 🚀 Я W Mirshod - full-stack "
 "архитектор решений, который самостоятельно создаёт полноценные цифровые "
 "платформы от концепции до развёртывания. Независимо от того, нужен ли вам "
-"простой интернет-магазин или сложные AI-системы, я занимаюсь всеми "
-"аспектами разработки, чтобы вам не пришлось управлять несколькими "
-"поставщиками."
+"простой интернет-магазин или сложные AI-системы, я занимаюсь всеми аспектами "
+"разработки, чтобы вам не пришлось управлять несколькими поставщиками."
 
 #: templates/sections/about.html:13
 msgid "🏗️ Complete Platform Development - Backend to Frontend"
@@ -73,11 +72,11 @@ msgid ""
 msgstr ""
 "Почему стоит выбрать решение от одного человека? Вы получаете единое "
 "видение, более быструю коммуникацию и экономически эффективную разработку. "
-"Мой опыт охватывает Python, Django, JavaScript, React, AWS, Docker, AI API "
-"и оптимизацию баз данных. Я проектировал микросервисы, создавал платформы "
-"с высокой нагрузкой и развёртывал масштабируемые решения для бизнеса. От "
-"MVP до корпоративных систем, я предоставляю end-to-end решения, которые "
-"растут вместе с вашим бизнесом."
+"Мой опыт охватывает Python, Django, JavaScript, React, AWS, Docker, AI API и "
+"оптимизацию баз данных. Я проектировал микросервисы, создавал платформы с "
+"высокой нагрузкой и развёртывал масштабируемые решения для бизнеса. От MVP "
+"до корпоративных систем, я предоставляю end-to-end решения, которые растут "
+"вместе с вашим бизнесом."
 
 #: templates/sections/about.html:24
 msgid "Project Ownership"
@@ -351,13 +350,20 @@ msgid "Software Engineer"
 msgstr "Инженер-программист"
 
 #: templates/sections/experience.html:34
-msgid "MegaDevs · Full-time"
+#, fuzzy
+#| msgid "MegaDevs · Full-time"
+msgid "MegaDevs (Germany Company) · Full-time"
 msgstr "MegaDevs · Полная занятость"
 
 #: templates/sections/experience.html:35
+#, fuzzy
+#| msgid ""
+#| "Developed and maintained multiple projects, with a key focus on IMAP/SMTP "
+#| "mail protocols and automation solutions in Germany."
 msgid ""
-"Developed and maintained multiple projects, with a key focus on IMAP/SMTP "
-"mail protocols and automation solutions in Germany."
+"Developed and maintained 20+ diverse projects for a leading German software "
+"company, with specialized expertise in IMAP/SMTP mail protocols and "
+"comprehensive automation solutions."
 msgstr ""
 "Разрабатывал и поддерживал множество проектов с ключевым фокусом на "
 "протоколах электронной почты IMAP/SMTP и решениях автоматизации в Германии."
