--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -2,6 +2,7 @@
   "hero": {
     "title": "Hi, I'm <1>Mirshod Qayimov</1><br/>Building Digital Solutions",
     "badge": "Full Stack Developer",
+    "subtitle": "Building robust microservices, scalable APIs, and intelligent AI solutions for modern businesses.",
     "typingTexts": [
       "Backend Developer & AI Engineer",
       "Microservices & APIs Specialist",
@@ -159,5 +160,14 @@
       "description": "Analytics dashboard for business intelligence.",
       "tags": ["React", "D3.js", "Analytics"]
     }
-  }
+  },
+  "Get In Touch": "Get In Touch",
+  "Featured Projects": "Featured Projects",
+  "Some of my recent work": "Some of my recent work",
+  "View Project": "View Project",
+  "View All Projects": "View All Projects",
+  "Quick Links": "Quick Links",
+  "Specializations": "Specializations",
+  "Connect With Me": "Connect With Me",
+  "All Rights Reserved.": "All Rights Reserved."
 }
